--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
+body{
+    width: 1010px;
+}
 .testata{
     background-color: blue;
-    background-image: url(./img/pattern.png);
-    height: 350px;
-    width: auto;
+    background-image: url(../img/pattern.png);
+    background-size: 40%;
+    height: 100px;
+    width: 1000px;
+    position: relative;
 }
 
 .logo{
-    width: 3rem;
+    width: 10rem;
+    position: absolute;
+    bottom: 15%;
+}
+
+.soft-grey{
+    color: rgb(154, 154, 154);
+}
+.light-blu{
+    color: rgb(16, 244, 244);
 }
