added footer image and lorem

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,18 @@ body{
 .celeste{
     background-color: aqua;
 }
+#display{
+    width: 312px;
+    height: 208px;
+    background-image: url(../img/monitor.jpg);
+    color: white;
+    font-size: 30px;
+    
+}
+#grafico{
+    width: 312px;
+    height: 208px;
+    background-image: url(../img/graph.jpg);
+    color: white;
+    font-size: 30px;
+}
